# picktheday

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  zellij-layout.kdl
.cargo/: config.toml
.github/workflows/: build-container.yaml  ci.yaml
Dockerfiles/: build.dockerfile
db/: dev.db
entity/: Cargo.toml
entity/src/: dates.rs  error.rs  lib.rs  plans.rs  types.rs  users.rs
entity/src/db/: mod.rs
entity/src/db/_dev_utils/: mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240918_104347_create_plans.rs  m20240918_110512_create_users.rs  m20240918_111732_create_dates.rs
migrations/2024-09-12-081742_create_plans/: up.sql
migrations/2024-09-12-083852_create_users/: up.sql
migrations/2024-09-12-083905_create_dates/: down.sql  up.sql
public/: main.css
service/: Cargo.toml  package-lock.json  tailwind.config.js
service/src/: app.rs  config.rs  error.rs  fileserv.rs  htmx_helpers.rs  lib.rs  main.rs
service/src/db/: error.rs  mod.rs
service/src/db/_dev_utils/: mod.rs
service/src/plan_page/: calendar.rs  htmx_ids.rs  mod.rs  results.rs  user.rs
service/src/util_components/: mod.rs
service/style/: input.css  output.css
src/: app.rs  main.rs
src/db/: mod.rs  models.rs  schema.rs  types.rs
src/db/models/: date.rs  mod.rs  plan.rs  user.rs
