[workspace.lints.rust]
unsafe_code = "forbid"

[workspace]
resolver = "2"
members = ["service", "migration", "entity"]

[workspace.dependencies]
derive_more = { version = "1.0.0-beta", features = ["from", "display"] }
dotenvy = "0.15"
once_cell = "1.20.2"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
time = { version = "0.3", features = ["serde"] }
rand = "0.8"
