[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
rand = "0.8"
time = "0.3"
sea-orm = { version = "1.0.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-time",
] }
derive_more = { version = "1", features = ["display"] }
