[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
rand = "0.8"
time = "0.3"
derive_more = { workspace = true }

migration = { path = "../migration" } # depends on your needs

# SeaORM
sea-orm = { version = "1.0.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-time",
] }

tokio = { version = "1", features = ["full"] }

dotenvy = { workspace = true }

[dev-dependencies]
anyhow = "1"
