[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
time = { workspace = true }
derive_more = { workspace = true }

migration = { path = "../migration" } # depends on your needs

# SeaORM
sea-orm = { version = "1.0.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-time",
    "debug-print",
] }

tokio = { version = "1", features = ["full"] }

dotenvy = { workspace = true }
dashmap = "6.1.0"
once_cell = { workspace = true }

[dev-dependencies]
anyhow = "1"
