[package]
name = "picktheday"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Web Framework and Server ---
axum = { version = "0.7", features = ["macros"] } # Web framework based on Hyper
axum-htmx = "0.6.0"
leptos = { version = "0.7.0", features = [
    "nightly",
    "ssr",
] } # Frontend framework for building web apps in Rust

# --- Async and Concurrency ---
tokio = { version = "1", features = [
    "rt-multi-thread",
] } # Async runtime for Rust
tower = { version = "0.4" } # Tower middleware and services
tower-http = { version = "0.5", features = [
    "fs",
    "compression-zstd",
] } # HTTP utilities for Tower
once_cell = { workspace = true }

# --- Error Handling ---
thiserror = { workspace = true } # Simplified error handling

# --- Utilities and Helpers ---
http = "1"                         # HTTP types and utilities
time = { workspace = true }
rand = { workspace = true }        # Random number generation
derive_more = { workspace = true } # Derive common traits with less boilerplate
dotenvy = { workspace = true }

# --- Tracing and Logging ---
tracing = { version = "0.1" } # tracing for structured logging
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
] } # tracing subscriber for filtering/logging


# --- Serialization and JSON ---
serde = { workspace = true } # Serialization framework
serde_json = "1"             # JSON serialization/deserialization
serde_with = "3"             # Enhanced functionality for Serde

# --- Modules ---
entity = { path = "../entity" } # module from local path

[dev-dependencies]
anyhow = "1"
